# WYD-Server-CPP

./: CMakeLists.txt  README.md
Code/DBSrv/: CMakeLists.txt  DBSrv.rc  README.md  TaskList  build.bat  build.sh
Code/DBSrv/doc/: 01_visao_geral.md  02_fluxo_execucao.md  03_processamento_mensagens.md  04_processamento_pacotes.md  05_arquitetura_banco_de_dados.md  sumario.md
Code/DBSrv/src/: Server.cpp  Server.h  Server_Methods.inl  common.h  main.cpp
Code/DBSrv/src/config/: ConfigManager.cpp  ConfigManager.h
Code/DBSrv/src/data/: DataManager.cpp  DataManager.h  DataManager_Methods.inl  GameData.cpp  GameData.h  RankingSystem.cpp  RankingSystem.h
Code/DBSrv/src/db/: DatabaseManager.cpp  DatabaseManager.h
Code/DBSrv/src/log/: logger.cpp  logger.h
Code/DBSrv/src/message/: MessageHandler.cpp  MessageHandler.h
Code/DBSrv/src/network/: NetworkManager.cpp  NetworkManager.h
Code/DBSrv/src/session/: CUser.h  SessionManager.cpp  SessionManager.h  UserSession.h
Code/DBSrv/src/task/: TaskManager.cpp  TaskManager.h
Code/TMSrv/: CMakeLists.txt
scripts/: build.ps1  clean.ps1  clean_build.ps1  config.ps1  rebuild.ps1
